@@ -1,3 +1,8 @@
+Sun Nov 18 14:51:35 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* include/string/byteswap.h: Upgrade to glibc 2.16.0 copy. Fixes
+	_BYTESWAP_H vs __BYTESWAP_H confusion.
+
 Sat Nov 10 17:51:15 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* scl/chunkid02.s (strtod,strtol,strtoul): Add comments.
